refactor!: raise minimum supported Minecraft version to 1.21.6